# HW_29_Django_DRF

./: README.md  manage.py  pyproject.toml
HW_29_Django_DRF/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  urls.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_alter_ad_options.py
ads/models/: ad.py
ads/serializers/: ad.py
ads/views/: ad.py
users/: admin.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_location_lat_and_more.py  0003_alter_user_options.py
users/models/: user.py
users/serializers/: location.py  user.py
users/views/: location.py  user.py
